--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ addons:
   chrome: stable
 before_install:
   - npm i -g npm@latest
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+#  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 script:
-  - npm start &
+#  - npm start &
   - npm run lint
-  - npm run test
+#  - npm run test
 deploy:
   - provider: pages
     skip_cleanup: true
